Displaying names and creating more API calls

--- a/app/index.html
+++ b/app/index.html
@@ -4,19 +4,17 @@
         <meta charset="utf-8">
         <title>Pokemon Cards</title>
         <!--build:css css/styles.min.css -->
-        <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title">
+        <link rel="stylesheet" href="/css/main.css" media="screen" title="no title">
         <!--endbuild-->
     </head>
     <body>
-        <h1>Day!!</h1>
-        <p>
-            Hey!
-        </p>
+        <div class="row">
+
+        </div>
 
         <!--build:js js/main.min.js -->
-        <script src="js/lib/one.js"></script>
-        <script src="js/lib/two.js"></script>
-        <script src="js/main.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script type="text/javascript" src="js/lib/card.js"></script>
         <!-- endbuild -->
     </body>
 </html>
