Added: Header + Header styling

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,12 @@
         <!--endbuild-->
     </head>
     <body>
+        <div class="header">
+            <div>
+                <h1>Project Pokemon</h1>
+                <button type="button" name="random">Random</button>
+            </div>
+        </div>
         <div class="row">
 
         </div>
