Added: Styling to cards

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pokemon Cards</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--build:css css/styles.min.css -->
         <link rel="stylesheet" href="/css/main.css" media="screen" title="no title">
         <!--endbuild-->
