--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <title>Pokemon Cards</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--build:css css/styles.min.css -->
-        <link rel="stylesheet" href="/css/main.css" media="screen" title="no title">
+        <link rel="stylesheet" href="styles/css/main.css" media="screen" title="no title">
         <!--endbuild-->
     </head>
     <body>
